[project]
name = "Quixote"
version = "4.0a1"
description = "A small and flexible Python Web application framework"
readme = "README.txt"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "The Quixote developers", email = "nas-quixote@arctrix.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/nascheme/quixote"

[dependency-groups]
dev = [
    "pytest",
    "black>=24.8.0",
    "ruff>=0.15.9",
    "pyrefly>=1.1.1",
]

[tool.black]
skip-string-normalization = true
line-length = 78
include = '\.ptl$'

[tool.ruff]
line-length = 78

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E401"]

[tool.ruff.lint.per-file-ignores]
"*.ptl" = ["F541", "B021"]

[tool.ruff.lint.pycodestyle]
max-line-length = 78

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quixote*"]

[[tool.setuptools.ext-modules]]
name = "quixote.html._c_htmltext"
sources = ["quixote/html/_c_htmltext.c"]
